--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,10 +29,10 @@ dependencies {
     implementation 'com.rengwuxian.materialedittext:library:2.1.4'
     implementation 'com.android.support:design:28.+'
     implementation 'com.android.support:cardview-v7:28.0.0'
-
-
+    implementation 'com.github.glomadrian:MaterialAnimatedSwitch:1.1@aar'
+    implementation 'com.firebase:geofire-android:2.1.2'
     implementation 'de.hdodenhof:circleimageview:3.0.1'
-
+    implementation 'com.github.d-max:spots-dialog:1.1@aar'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
     implementation 'com.google.firebase:firebase-database:16.0.4'
     implementation 'com.google.android.gms:play-services-maps:16.1.0'
